[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"]
[tool.setuptools]
packages = ["easy_to_maths"]
[project]
name = "easy-to-maths"
version = "0.3.0"
description = "A simple Python package providing basic arithmetic operations."
readme = "readme.md"
requires-python = ">=3.9"
authors = [
    { name = "Arpit Soni", email = "harshit998ops@gmail.com" }
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Arpitsoni89/maths-tools"
Issues = "https://github.com/Arpitsoni89/maths-tools/issues"
